Created product, about pages

--- a/css/style.css
+++ b/css/style.css
@@ -31,9 +31,10 @@ body {
 }
 
 .logo {
-    width: 50%;
+    width: 60%;
     color: #2284d9;
     margin-left: 40px;
+    text-decoration: none;
 }
 
 .logo:hover {
@@ -49,9 +50,9 @@ body {
 .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 10px;
     padding-left: 35px;
-    font-size: 18px;
-    color: rgb(255, 255, 255);
+    font-size: 20px;
     font-weight: 400;
+    color: #2284d9;
 }
 
 .navbar-light .navbar-nav .active>.nav-link,
@@ -81,7 +82,7 @@ body {
 .products {
     display: flex;
     flex-wrap: wrap;
-    margin: 10px;
+    margin: 40px;
 }
 
 .products .box h4 {
@@ -93,7 +94,7 @@ body {
 .products .box p {
     line-height: 24px;
     font-size: 14px;
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 .products .box h4 a {
@@ -126,4 +127,109 @@ body {
     margin-bottom: 20px;
     padding-bottom: 20px;
     color: #2284d9;
+}
+
+.section p {
+    padding-right: 20px;
+    padding-left: 20px;
+}
+
+.accordion {
+    padding: 30px;
+}
+
+#footer .footer-top {
+    padding: 60px 0 30px 0;
+}
+
+#footer .footer-top .footer-contact h3 {
+    font-size: 28px;
+    margin: 0 0 10px 0;
+    padding: 2px 0 2px 0;
+    line-height: 1;
+    text-transform: uppercase;
+    font-weight: 600;
+    color: #2284d9;
+}
+
+#footer .footer-top .footer-contact p {
+    font-size: 14px;
+    line-height: 24px;
+    font-family: "Jost", sans-serif;
+    color: #2284d9;
+}
+
+#footer .footer-top h4 {
+    font-size: 16px;
+    font-weight: bold;
+    color: #2284d9;
+    position: relative;
+    padding-bottom: 12px;
+}
+
+#footer .footer-top .footer-links {
+    margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-links ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+#footer .footer-top .footer-links ul i {
+    padding-right: 2px;
+    color: #2284d9;
+    font-size: 18px;
+    line-height: 1;
+}
+
+#footer .footer-top .footer-links ul li {
+    padding: 10px 0;
+    display: flex;
+    align-items: center;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+    padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul a {
+    color: #2284d9;
+    display: inline-block;
+    line-height: 1;
+    text-decoration: none;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+    text-decoration: none;
+    color: #2242ab;
+}
+
+#footer .footer-top .social-links a {
+    font-size: 18px;
+    display: inline-block;
+    background: #2284d9;
+    color: #fff;
+    line-height: 1;
+    padding: 8px 0;
+    margin-right: 4px;
+    border-radius: 50%;
+    text-align: center;
+    width: 36px;
+    height: 36px;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+#footer .footer-top .social-links a:hover {
+    background-color: #2242ab;
+    color: #fff;
+    text-decoration: none;
+}
+
+#footer .footer-bottom {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    color: #fff;
 }
