--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,6 @@ body {
     font-weight: 500;
     margin-bottom: 5px;
     color: #2284d9;
-    padding: 20px;
 }
 
 .details ul {
@@ -359,4 +358,10 @@ body {
 .details p {
     padding-right: 20px;
     padding-left: 20px;
+}
+
+.details h5 {
+    font-size: 12px;
+    font-weight: 500;
+    color: #2284d9;
 }
