--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
     margin: 5%;
 }
 
+.container-one {
+    display: inline;
+}
+
 .banner h1 {
     font-size: 48px;
     font-weight: 700;
@@ -27,10 +31,22 @@ body {
 }
 
 .logo {
-    width: 55%;
+    width: 60%;
     color: whitesmoke;
-    margin-left: 40px;
     text-decoration: none;
+    margin-left: 30px;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.logo img {
+    float: left;
+    border-radius: 50px;
+    max-width: 50px;
+    max-height: 50px;
+    width: 40%;
+    height: auto;
+    margin-right: 5px;
 }
 
 .logo:hover {
@@ -123,6 +139,13 @@ body {
     overflow: hidden;
 }
 
+.product img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
 .section-title {
     text-align: center;
     padding-bottom: 30px;
@@ -143,6 +166,16 @@ body {
 
 .accordion {
     padding: 30px;
+}
+
+.downloadsection {
+    margin: 30px;
+}
+
+.downloadsection a {
+    color: #cf0a0a;
+    font-weight: 500;
+    margin: 20px;
 }
 
 #footer .footer-top {
